<resources>
    <string name="app_name">SharedShoppingList</string>
    <string name="action_signout">Sign out</string>
    <string name="TAG">agbaria</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_text">Enter email to reset your password:</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_list">Add new list</string>
    <string name="action_saved_lists">Saved lists</string>
    <string name="action_profile">Profile</string>
    <string name="search_list">Search</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_add_friend">Add friend</string>
    <string name="action_leave_list">Leave list</string>
    <string name="action_friends">Friends</string>
    <string name="client_id">125901932735-lvk5t9k0e0r7vhhig3p5krg0mvtu89bc.apps.googleusercontent.com</string>
    <string name="email_hint">Friend email</string>
    <string name="action_list_info">List info</string>
    <string name="leave_btn">leave</string>
    <string name="create_new_list">create new list</string>
    <string name="or_select_from_list_below">Or select from list below:</string>
    <string name="creation_date">Creation date:</string>
    <string name="join_date">Join date:</string>
    <string name="participants">Participants:</string>
    <string name="created_by">Created by:</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="checked_by">Checked by:&#160;</string>
    <string name="unchecked">Unchecked</string>
    <string name="you">You</string>
    <string name="action_delete">Remove items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_lorem">agbaria.3laa@gmail.com</string>
</resources>
