<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.agbaria.sharedshoppinglist.Activities.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/search_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addList"
        android:icon="@mipmap/ic_plus"
        android:title="@string/add_new_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_savedLists"
        android:orderInCategory="1"
        android:title="@string/action_saved_lists"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_friends"
        android:orderInCategory="2"
        android:title="@string/action_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="3"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/action_signout"
        app:showAsAction="never" />
</menu>
