<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_delete"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@mipmap/ic_star"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_friend"
        android:icon="@mipmap/ic_add_friend"
        android:title="@string/action_add_friend"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_listInfo"
        android:orderInCategory="1"
        android:title="@string/action_list_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leaveList"
        android:orderInCategory="2"
        android:title="@string/action_leave_list"
        app:showAsAction="never" />

</menu>