<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:id="@+id/tv1"/>

    <View
        android:layout_below="@id/tv1"
        android:id="@+id/br1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#aa717171"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_text"
        android:id="@+id/tv2"
        android:layout_below="@id/br1"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etResetEmail"
        android:layout_below="@id/tv2"
        android:drawableRight="@mipmap/ic_email"
        android:inputType="textEmailAddress" />

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnReset"
        android:background="#00ffffff"
        android:layout_below="@id/etResetEmail"
        android:layout_alignParentRight="true"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:background="#00ffffff"
        android:layout_toLeftOf="@id/btnReset"
        android:layout_below="@id/etResetEmail"/>
</RelativeLayout>