<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:text="@string/created_by"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvListOwner"
        android:textSize="20sp"
        android:layout_below="@id/tv1"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="horizontal"
        android:layout_below="@id/tvListOwner"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creation_date"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCreationDate"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_date"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvJoinDate"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv4"
        android:text="@string/participants"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="#EEEEEE"
        android:layout_below="@id/ll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingStart="5dp"
        android:paddingLeft="5dp" />

</RelativeLayout>